@@ -330,6 +330,39 @@ USING
 + (void)select: (int)n from: aCollection into: bCollection;
 @end
 
+@protocol ListShuffler <SwarmObject>
+//S: A class to randomize the order of a given Swarm List
+
+//D: ListShuffler randomizes the order of the elements in a List; 
+//D: either the whole list or the num lowest elements. The list must be
+//D: supplied. An uniform distribution can be supplied, or the system-
+//D: supplied uniformUnsRand is used. The algorith is from Knuth.
+//D: All these methods modify the underlying collection, so
+//D: any indexes should always be regenerated. 
+CREATING
+
++ createBegin: aZone;
+
+//M: the setUniformRandom: method connects the supplied uniform distribution 
+//M: to the Shuffler (run after createBegin:).
+- setUniformRandom: dist;
+
+- createEnd;
+
+//M: the create:setUniformRandom method creates the Shuffler
+//M: and connects the supplied distribution object.
++ create: aZone setUniformRandom: dist;
+
+USING
+
+//M: the shuffleWholeList method randomizes the whole list.
+- shuffleWholeList: list;
+
+//M: the shufflePartialList:Num method randomizes the order of the 'num'
+//M: lowest elements of the list, or the whole list if (num > size of list).
+- shufflePartialList: list Num: (int)num;
+@end
+
 
 //F: Initializes the Swarm libraries. This call should be in any Swarm code
 //F: you write.
@@ -351,3 +384,5 @@ extern int swarmGUIMode;
 @class ObjectSaver;
 @class QSort;
 @class NSelect;
+@class ListShuffler;
+
